// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React select component Should render correctly 1`] = `
<FormGroup
  bsClass="form-group"
  validationState={null}
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    test select
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <PfSelect
      clearable={false}
      input={
        Object {
          "disabled": false,
          "id": "name",
          "maxLength": undefined,
          "name": "name",
          "onBlur": [MockFunction],
          "onChange": [MockFunction],
          "onFocus": [MockFunction],
          "value": "",
        }
      }
      label="test select"
      labelKey="label"
      meta={
        Object {
          "active": false,
          "data": Object {},
          "dirty": false,
          "dirtySinceLastSubmit": false,
          "error": undefined,
          "invalid": false,
          "pristine": true,
          "submitFailed": false,
          "submitSucceeded": false,
          "touched": false,
          "valid": true,
          "visited": false,
        }
      }
      multi={false}
      options={
        Array [
          Object {
            "label": "option 1",
            "value": 1,
          },
          Object {
            "label": "option 2",
            "value": 2,
          },
        ]
      }
      placeholder=""
      searchable={false}
      simpleValue={true}
      valueKey="value"
    />
  </Col>
</FormGroup>
`;

exports[`React select component Should render correctly in error state 1`] = `
<FormGroup
  bsClass="form-group"
  validationState="error"
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    test select
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <PfSelect
      clearable={false}
      input={
        Object {
          "disabled": false,
          "id": "name",
          "maxLength": undefined,
          "name": "name",
          "onBlur": [MockFunction],
          "onChange": [MockFunction],
          "onFocus": [MockFunction],
          "value": "",
        }
      }
      label="test select"
      labelKey="label"
      meta={
        Object {
          "active": false,
          "data": Object {},
          "dirty": false,
          "dirtySinceLastSubmit": false,
          "error": "Required",
          "invalid": false,
          "pristine": true,
          "submitFailed": false,
          "submitSucceeded": false,
          "touched": false,
          "valid": true,
          "visited": false,
        }
      }
      multi={false}
      options={
        Array [
          Object {
            "label": "option 1",
            "value": 1,
          },
          Object {
            "label": "option 2",
            "value": 2,
          },
        ]
      }
      placeholder=""
      searchable={false}
      simpleValue={true}
      valueKey="value"
    />
    <HelpBlock
      bsClass="help-block"
    >
      Required
    </HelpBlock>
  </Col>
</FormGroup>
`;
